# APIs-Development-with-FastAPI

./: .env.example  .gitignore  CopilotInstructions.md  DEPLOYMENT.md  LEARNING_GUIDE.md  README.md  postman_collection.json  pyproject.toml  requirements.txt  run.py  setup.py  test_api.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/dependencies/: auth.py
app/api/routes/: admin.py  auth.py  health.py  posts.py  users.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py
app/schemas/: __init__.py
app/services/: post_service.py  user_service.py
app/utils/: health_checks.py  helpers.py
tests/: conftest.py
tests/integration/: test_workflows.py
tests/unit/: test_auth.py
